data/derived/sp14/progs/unify/prog3787.ml.out
Characters 125-138:
  | true  -> digitsOfInt n mod 10;;
             ^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
